fix(molecule/rating): fix missing background color

--- a/components/molecule/rating/src/index.scss
+++ b/components/molecule/rating/src/index.scss
@@ -42,6 +42,7 @@ $class-label-link: '#{$class-label}Link';
   }
 
   svg {
+    fill: currentColor;
     height: 100%;
     width: 100%;
   }
